Fix some bugs about the height being too high so that some content wasn't visible for many windows

--- a/src/components/blockexplorer/style.less
+++ b/src/components/blockexplorer/style.less
@@ -14,6 +14,19 @@
 // You should have received a copy of the GNU General Public License
 // along with Superblocks Studio.  If not, see <http://www.gnu.org/licenses/>.
 
+.main {
+    background-color: #1e1e1e;
+    width: 100%;
+    height: 100%;
+    color: #eee;
+    .inner {
+        padding: 16px 10px 80px 50px;
+    }
+    .title {
+        font-weight: 700;
+    }
+}
+
 .transactionlog {
     margin-top: 30px;
     color: #fff;
@@ -66,6 +79,7 @@
         float: left;
         margin-left: 10px;
         .txtable {
+            padding: 10px;
             border: 1px solid #eee;
             td {
                 color: #fff;
