--- a/src/components/projecteditor/style-editor-account.less
+++ b/src/components/projecteditor/style-editor-account.less
@@ -19,7 +19,9 @@
     width: 100%;
     height: 100%;
     color: #eee;
-    padding: 16px 10px 80px 50px;
+    .inner {
+        padding: 16px 10px 80px 50px;
+    }
     .title {
         font-weight: 700;
     }
